added basic elements

--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <meta charset="UTF-8">
     <title>Chris Mitchell</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <script src="background_text.js" type="text/javascript"></script>
 </head>
+    
 <body>
     
+<div id="background_text_wrapper">    
+    <div id="textline1" class="background_text_line">
+        ..................................
+    </div>
+    <div class="background_text_line">
+        ..................................
+    </div>
+</div>
+
+<div id="link_wrapper">
     <a href="https://cbm54d.github.io/Knights-Tour/">Knight's Tour</a><br>
     <a href="https://cbm54d.github.io/Eight-Queens/">Eight Queens</a><br>
     <a href="https://cbm54d.github.io/Cross-Invert/">Cross Invert</a><br>
-
+</div>
 </body>    
 </html>
